# mineager

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/java/: detector.rs  jre.rs
src-tauri/src/manager/: backups.rs  ban.rs  cron.rs  local_servers.rs  mod.rs  operators.rs  process.rs  servers.rs  whitelist.rs
src-tauri/src/minecraft/: jars.rs  mod.rs  versions.rs
src-tauri/src/utils/: jars.rs  local_servers.rs  mod.rs  path.rs  servers.rs  versions.rs
src-tauri/src/utils/java/: detector.rs  jre.rs  mod.rs  sources.rs
src/components/server/: AddServerPanel.tsx  ServerTabView.tsx  ServerView.tsx
src/components/server/placeholders/: NoPropertiesFound.tsx  NoServerSelected.tsx
src/components/server/tabs/: ServerBackups.tsx  ServerBans.tsx  ServerConsole.tsx  ServerOperators.tsx  ServerProperties.tsx  ServerSettings.tsx  ServerWhitelist.tsx
src/components/sidebar/: Sidebar.tsx  SidebarServer.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Select.tsx  SettingContainer.tsx  Slider.tsx  Switch.tsx  ThemeToggle.tsx
src/style/: App.css
src/types/: types.tsx
src/utils/: colors.test.ts  colors.ts  versions.test.ts  versions.ts
src/windows/: AddServer.tsx
