[package]
name = "mineager"
version = "0.2.1"
description = "a minecraft server manager"
authors = ["shiiru"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mineager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
dirs = "6.0.0"
sha2 = "0.11.0"
hex = "0.4.3"
bytes = "1.11.1"
uuid = { version = "1.23.0", features = ["v4"] }
sha1 = "0.11.0"
zip = "8.5.0"

